--- a/customevideoplayer/src/app/ui/header/header.component.html
+++ b/customevideoplayer/src/app/ui/header/header.component.html
@@ -5,19 +5,12 @@
       <a class="nav-item nav-link active" href="#">Home</a>
       <a class="nav-item nav-link" href="#">About</a>
       <a class="nav-item nav-link" href="#">Contact</a>
+      <a class="nav-item nav-link" routerLink="/addvideo" routerLinkActive="active"  href="/addvideo">Add video</a>
     </div>
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
     <div class="navbar-nav">
-     <!-- <a class="nav-item nav-link" href="https://github.com/beeman" target="_blank">
-        <i class="fa fa-github"></i>
-      </a>
-      <a class="nav-item nav-link" href="https://twitter.com/beeman_nl" target="_blank">
-        <i class="fa fa-twitter"></i>
-      </a>
-      <a class="nav-item nav-link" href="https://medium.com/@beeman" target="_blank">
-        <i class="fa fa-medium"></i>
-      </a> -->
+     
     </div>
   </div>
 </nav>
