--- a/customevideoplayer/src/app/ui/layout/layout.component.html
+++ b/customevideoplayer/src/app/ui/layout/layout.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <div class="container">
-  <app-awesome-player></app-awesome-player>
+ <!-- <app-awesome-player></app-awesome-player>-->
+  <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
