--- a/customevideoplayer/src/app/ui/add-new-video/add-new-video.component.html
+++ b/customevideoplayer/src/app/ui/add-new-video/add-new-video.component.html
@@ -1,25 +1,51 @@
-<p>
-  add-new-video works!
-</p>
+<div class="container">
+    <form name="myForm" >
+    <div class="form-group">
+        <label for="title">Title:{{url}}</label>
+        <input for="title" name="title" type="text" required class="form-control" [(ngModel)]="title">
+        <div class="alert alert-danger" *ngIf="title.error && (title.touched || title.dirty)">
+            <span class="error" ng-show="form.title.$dirty && myForm.title.$error.required">
+                Required!</span>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="url">Url:{{url}}</label>
+        <input for="url" type="url"  name="url" required class="form-control" [(ngModel)]="url">
+        <div class="alert alert-danger" *ngIf="url.error && (url.touched || url.dirty)">
+            <span class="error" ng-show="form.url.$dirty && myForm.url.$error.required">
+                Required!</span>
+            <span class="error" ng-show="form.url.$dirty && myForm.input.$error.url">
+                Not valid url!</span>
+        </div>
+    </div>
+    <button (click)="addVideo()"> Add </button>
+    </form>
 
 
-<table style="width:100%">
-  <tr>
-    <th>S.No</th>
-    <th>Tittle</th>
-    <th>Url</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-  <tr *ngFor="let video of playlist" >
-    <td>{{ video.num }}</td>
-    <td>{{ video.title }} </td>
-   
 
-    <td>
-    <button (click)="deletePolicy(policy.id)">Delete</button>
-    <button (click)="updatePolicy(policy)">Update</button>
-    </td>
-  </tr>
-</table>
+    <table style="width:100%; " class="table table-striped mt-1">
+        <tr>
+            <th>S.No</th>
+            <th>Tittle</th>
+            <th>Url</th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+        <tr *ngFor="let video of playlist">
+            <td>{{ video.id }}</td>
+            <td>{{ video.title }} </td>
+            <td><a [href]="video.url">{{ video.url }}</a> </td>
+
+            <td>
+                <button>edit</button>
+            </td>
+            <td>
+                <button (click)="deleteVideo(video.id)">Delete</button>
+            </td>
+            <td>
+                <button>Approve</button>
+            </td>
+        </tr>
+    </table>
+</div>
