feature state service changes

--- a/customevideoplayer/src/app/ui/layout/layout.component.html
+++ b/customevideoplayer/src/app/ui/layout/layout.component.html
@@ -1,6 +1,5 @@
-<app-header></app-header>
 <div class="container">
- <!-- <app-awesome-player></app-awesome-player>-->
-  <router-outlet></router-outlet>
+<app-header></app-header>
+  <router-outlet class="mb-2"></router-outlet>
+<!--<app-footer></app-footer>-->
 </div>
-<app-footer></app-footer>
