--- a/customevideoplayer/src/app/ui/controls/controls.component.html
+++ b/customevideoplayer/src/app/ui/controls/controls.component.html
@@ -1,32 +1,33 @@
 <div id='controls'>
   <button id='play'
           class='fa fa-play btn btn-circle btn-lg'
-          ngClass='toggle? '
+          [ngClass]="videoPlay? 'btn-blue' : 'btn-grey'"
           title='play'
           (click)='play()'></button>
   <button id='pause'
           class='fa fa-pause btn btn-circle btn-lg'
+          [ngClass]="videoPause? 'btn-blue' : 'btn-grey'"
           title='pause'
           (click)='pause()'></button>       
   <button id='volumeupbtn'
-          class='fa fa-plus btn btn-circle btn-lg'
+          class='fa fa-plus btn btn-circle btn-lg btn-blue'
           title='Volume UP'
           (click)='volumeUp()'></button>
   <button id='volumedownbtn'
-          class='fa fa-minus btn btn-circle btn-lg'
+          class='fa fa-minus btn btn-circle btn-lg btn-blue'
           title='Volume Down'
           (click)='volumeDown()'></button> 
   <button id='volumeRepeatbtn'
-          class='fa fa-repeat btn btn-circle btn-lg'
+          class='fa fa-repeat btn btn-circle btn-lg btn-blue'
           title='play'
           (click)='repeat()'></button> 
   <button id='thumbsbtn'
-          class='fa fa-thumbs-up btn btn-circle btn-lg'
-          title='play'
+          class='fa fa-thumbs-up btn btn-circle btn-lg btn-blue'
+          title='like'
           onClick=''></button> 
-          <button id='volumedownbtn'
-          class='fa fa-thumbs-down btn btn-circle btn-lg'
-          title='play'
+          <button id='thumsdownbtn'
+          class='fa fa-thumbs-down btn btn-circle btn-lg btn-green'
+          title='unlike'
           onClick=''></button>        
 </div>
 <div>
