--- a/customevideoplayer/src/app/ui/controls/controls.component.scss
+++ b/customevideoplayer/src/app/ui/controls/controls.component.scss
@@ -23,4 +23,18 @@
     line-height: 1.33;
     border-radius: 35px;
   }
-  
+  .btn-red{
+    color:red;
+  }
+
+  .btn-green{
+    color:greenyellow;
+  }
+
+  .btn-blue{
+    color:rgba(0, 38, 255, 0.541);
+  }
+ 
+  .btn-grey{
+    color:gainsboro;
+  }
