--- a/customevideoplayer/src/app/ui/player/player.component.html
+++ b/customevideoplayer/src/app/ui/player/player.component.html
@@ -1,5 +1,5 @@
 <div>
-  <video #playerelement id="awesome_player" width="100%" >
+  <video #playerelement id="awesome_player" width="100%" (progress)="progressOfVideo()" onended="">
     <source [src]="videoSource" type="video/mp4" />
   </video>
 </div>
