--- a/customevideoplayer/src/app/ui/controls/controls.component.html
+++ b/customevideoplayer/src/app/ui/controls/controls.component.html
@@ -31,11 +31,11 @@
           onClick=''></button>        
 </div>
 <div>
-progress                 {{progress}}
+
   <progress id="video_progress_bar" #videoTracker
             style="width:100%" max="100" value="{{progress}}">
           <div> class="progress-bar">
-            <span>progress 80%</span>
+            <span>progress {{progress}}%</span>
           </div>
           </progress>
 </div>
