--- a/customevideoplayer/src/app/ui/add-new-video/add-new-video.component.html
+++ b/customevideoplayer/src/app/ui/add-new-video/add-new-video.component.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="url">Url:{{url}}</label>
+        <label for="url">Url: {{url}}</label>
         <input for="url" type="url"  name="url" required class="form-control" [(ngModel)]="url">
         <div class="alert alert-danger" *ngIf="url.error && (url.touched || url.dirty)">
             <span class="error" ng-show="form.url.$dirty && myForm.url.$error.required">
@@ -18,7 +18,8 @@
                 Not valid url!</span>
         </div>
     </div>
-    <button (click)="addVideo()"> Add </button>
+    <button *ngIf="!isEditEnabled" (click)="add()"> Add </button>
+    <button *ngIf="isEditEnabled" (click)="edit()"> Edit </button>
     </form>
 
 
@@ -38,13 +39,13 @@
             <td><a [href]="video.url">{{ video.url }}</a> </td>
 
             <td>
-                <button>edit</button>
+                <button (click) ="enableEdit(video.id)">edit</button>
             </td>
             <td>
                 <button (click)="deleteVideo(video.id)">Delete</button>
             </td>
             <td>
-                <button>Approve</button>
+                <button (click)="approve(video.id)">Approve</button>
             </td>
         </tr>
     </table>
