--- a/springbootassignment/src/main/resources/templates/user/userHome.html
+++ b/springbootassignment/src/main/resources/templates/user/userHome.html
@@ -12,20 +12,14 @@
 
 <body>
 <div class="container">
-
-    <form th:action="@{/logout}" method="get">
-        <button class="btn btn-md btn-danger btn-block" name="registration"
-                type="Submit">Logout
-        </button>
-    </form>
-
+<th:block th:include="/menu"></th:block>
     <div class="panel-group" style="margin-top:40px">
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <span th:utext="${userName}"></span>
             </div>
             <div class="panel-body">
-                <img th:src="@{/images/user.jpg}" class="img-responsive center-block" width="400" height="400"
+                <img th:src="@{/images/user.png}" class="img-responsive center-block" width="400" height="400"
                      alt="User"/>
             </div>
             <p class="admin-message-text text-center" th:utext="${userMessage}"></p>
